# Chromasnake

./: .gitignore  App.cpp  Atrib.h  CMakeLists.txt  Config.h  Entidade.h  Food.cpp  Food.h  Game.cpp  Game.h  Grid.cpp  Grid.h  Interfaces.h  README.md  RNG.h  Snake.cpp  Snake.h  TODO.txt
